# distributed-system

./: CMakeLists.txt  client.c  node.c  server.c  todo-tree.txt
include/: channel_api.h  channel_wrapper.h  client_api.h  cmd_line_parser_api.h  machine_api.h  machine_wrapper.h  networking_api.h  pipe_api.h  pipe_wrapper.h  process_api.h  process_wrapper.h  socket_api.h  socket_wrapper.h  str_utils_api.h  yaml_parser_api.h
src/: channel.c  channel_wrapper.c  client.c  client_api.h  cmd_line_parser.c  cmd_line_parser.h  cmd_line_parser_api.h  communication_utils.c  communication_utils_api.h  config_node.yml  config_processes.yml  machine.c  machine_wrapper.c  networking_api.h  node.c  node_wrapper.h  pipe.c  pipe_utils.c  pipe_utils.h  pipe_utils_api.h  pipe_wrapper.c  process.c  process_mgr.c  process_mgr_api.h  process_wrapper.c  procs_mgr.c  server.c  server_api.h  shared_memory_utils.c  shared_memory_utils_api.h  socket.c  socket_wrapper.c  str_utils.c  str_utils_api.h  thread_utils.c  yaml_parser.c  yaml_parser_api.h
